[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/Shop/Shop.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Inventory/Slot.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font,themes/fonts/m3x6.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="ShopSlots" type="GridContainer" parent="."]
margin_left = 567.0
margin_top = 167.0
margin_right = 713.0
margin_bottom = 264.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot" parent="ShopSlots" instance=ExtResource( 2 )]
margin_right = 48.0
margin_bottom = 48.0

[node name="Slot2" parent="ShopSlots" instance=ExtResource( 2 )]
margin_left = 49.0
margin_right = 97.0
margin_bottom = 48.0

[node name="Slot3" parent="ShopSlots" instance=ExtResource( 2 )]
margin_left = 98.0
margin_right = 146.0
margin_bottom = 48.0

[node name="Slot4" parent="ShopSlots" instance=ExtResource( 2 )]
margin_top = 49.0
margin_right = 48.0
margin_bottom = 97.0

[node name="Slot5" parent="ShopSlots" instance=ExtResource( 2 )]
margin_left = 49.0
margin_top = 49.0
margin_right = 97.0
margin_bottom = 97.0

[node name="Slot6" parent="ShopSlots" instance=ExtResource( 2 )]
margin_left = 98.0
margin_top = 49.0
margin_right = 146.0
margin_bottom = 97.0

[node name="Shop" type="Label" parent="."]
margin_left = 568.0
margin_top = 136.0
margin_right = 616.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
visible = false
margin_left = 720.0
margin_top = 174.0
margin_right = 786.0
margin_bottom = 258.0
custom_fonts/font = SubResource( 2 )
text = "Item: %s
Price: %s
Dmg: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
visible = false
margin_left = 384.0
margin_top = 264.0
margin_right = 668.0
margin_bottom = 290.0
rect_scale = Vector2( 1.8, 1.8 )
custom_fonts/font = SubResource( 3 )
text = "Info"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info_visibility" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Desc_visibility" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Info_visibility" to="." method="_on_Info_visibility_timeout"]
[connection signal="timeout" from="Desc_visibility" to="." method="_on_Desc_visibility_timeout"]
